@@ -235,7 +235,7 @@ def start_service(node_logger):
 
 def delete_conf(node_logger, filename):
     try:
-        check_output(["/bin/rm", "{}/{}".format(RSYSLOG_PATH, filename)], stderr=PIPE).decode('utf8')
+        check_output(["/bin/rm", "-f", "{}/{}".format(RSYSLOG_PATH, filename)], stderr=PIPE).decode('utf8')
         # Return message to API request, that will be saved into MessageQueue result
         return "'{}' successfully deleted.".format(filename)
 
